@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 23, 2008</p>
+      <p>Last Updated: August 29, 2008</p>
     </td>
   </tr>
 </table>
@@ -1056,6 +1056,8 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fix error in stat() when used on the root directory
 	* NSH: Add cd and pwd commands and current working directory to all NSH
 	  commands that refer to paths.
+	* Fix errors and warnings introduced into Linux sim build because of recent
+	  Cygwin-related changes
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
