@@ -81,6 +81,15 @@
 
 void up_initialize(void)
 {
+  /* The real purpose of the following is to make sure that lib_rawprintf
+   * is drawn into the link.  It is needed by up_tapdev which is linked
+   * separately.
+   */
+
+#ifdef CONFIG_NET
+  lib_rawprintf("SIM: Initializing");
+#endif
+
   /* Register devices */
 
   devnull_register();       /* Standard /dev/null */
